--- a/www/index.html
+++ b/www/index.html
@@ -38,5 +38,7 @@
       have templates inline in this html file if you'd like).
     -->
     <ion-nav-view></ion-nav-view>
+	<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCsSwtLZ3kCRsfj0eGWQMROBy-CrKQdTfU&sensor=true"></script>
+
   </body>
 </html>
