--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,7 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
 	<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCsSwtLZ3kCRsfj0eGWQMROBy-CrKQdTfU&sensor=true"></script>
+	<script src='lib/angular-google-maps/dist/angular-google-maps.min.js'></script>
   </head>
   <body ng-app="starter" animation="slide-left-right-ios7">
     <!-- 
