--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
     <script src='lib/lodash/dist/lodash.underscore.min.js'></script>
     <script src='lib/angular-google-maps/dist/angular-google-maps.min.js'></script>
-	<script src="js/angular-resource.js">
+	<script src="js/angular-resource.js"/>
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
