--- a/www/index.html
+++ b/www/index.html
@@ -29,7 +29,7 @@
     <script src="js/services.js"></script>
 	<script src="js/angular-resource.js"/>
   </head>
-  <body ng-app="starter" animation="slide-left-right-ios7">
+  <body animation="slide-left-right-ios7">
     <!-- 
       The nav bar that will be updated as we navigate between views.
     -->
