--- a/www/index.html
+++ b/www/index.html
@@ -22,14 +22,13 @@
     <script src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
     <script src='lib/lodash/dist/lodash.underscore.min.js'></script>
     <script src='lib/angular-google-maps/dist/angular-google-maps.min.js'></script>
-	
+
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
-	<script src="js/angular-resource.js"/>
   </head>
-  <body animation="slide-left-right-ios7">
+  <body ng-app="starter" animation="slide-left-right-ios7">
     <!-- 
       The nav bar that will be updated as we navigate between views.
     -->
