--- a/www/index.html
+++ b/www/index.html
@@ -28,7 +28,7 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
 	<script src="js/angular-filter.js"></script>
-	<script src="js/angular-animate.js"></script>
+	<script src="lib/angular-animate/angular-animate.js"></script>
   </head>
   <body ng-app="starter" animation="slide-left-right-ios7">
     <!-- 
