--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,7 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+	<script src="lib/angular/angular.js"></script>
 	<script src="js/angular-filter.js"></script>
 	<script src="js/jquery-1.11.1.js"></script>
 	<script src="lib/angular-animate/angular-animate.js"></script>
