--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,7 @@
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="lib/ng-cordova.js"></script>
-    <script src="cordova.js"></script>
+    <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 
     <script src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
     <script src='lib/lodash/dist/lodash.underscore.min.js'></script>
@@ -27,7 +27,6 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
-	<script src="lib/angular/angular.js"></script>
 	<script src="js/angular-filter.js"></script>
 	<script src="js/jquery-1.11.1.js"></script>
 	<script src="lib/angular-animate/angular-animate.js"></script>
