--- a/www/index.html
+++ b/www/index.html
@@ -28,8 +28,7 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
 	<script src="js/require.js"></script>
-	<script src="js/underscore.js"></script>
-	<script src="js/angular-underscore-module.js"></script>
+	<script src="js/ng-underscore.js"></script>
 	<script src="js/angular-filter.js"></script>
 	<script src="js/jquery-1.11.1.js"></script>
 	<script src="lib/angular-animate/angular-animate.js"></script>
